<resources>
    <string name="app_name">miCaddy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    //Strings for login screen
    <string name ="hint_email">Email</string>
    <string name ="hint_password">Password</string>
    <string name ="btn_login">LOGIN</string>
    <string name ="btn_link_to_register">Not a member? Sign up now.</string>

    //Strings for sign-up screen
    <string name ="hint_firstname">First Name</string>
    <string name ="hint_secondname">Second Name</string>
    <string name ="hint_handicap">Handicap</string>
    <string name ="btn_register">REGISTER</string>
    <string name="hint_confirmPassword">Confrim Password</string>
    <string name ="btn_link_to_login">Already registered? Login.</string>

    //Strings for main screen
    <string name="welcome">Welcome Back</string>
    <string name="handicap">Your current handicap is: </string>

    //Strings for edit screen
    <string name="edit_heading">Edit Your Details</string>
    <string name="edit_btn_delete">Delete Your Account</string>
    <string name="hint_id">Unique ID</string>
    <string name="btn_edit">Save Changes</string>

    //String for nav-bar
    <string name="nav_home">Home</string>
    <string name="nav_settings">Account</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_header">MiCaddy</string>
    <string name="nav_rounds">Play a Round</string>
    <string name ="nav_scorecards">Scorecard</string>

    //String for rounds screen
    <string name="round_header">Manage Your Rounds</string>
    <string name="round_start">Start a New Round</string>

    //String for new rounds
    <string name="round_setup_title">New Round</string>
    <string name="round_setup_course">Name of Course</string>
    <string name="round_setup_date">Date</string>
    <string name="round_setup_set_date">Set Date</string>
    <string name="round_setup_start">Start Your Round</string>
    <string name="round_setup_cancel">Cancel</string>

    <string name="action_settings">Settings</string>

    <string name="map_type_normal">Normal</string>
    <string name="map_type_sat">Satellite</string>
    <string name="map_type_terrain">Terrain</string>
    <string name="map_type_hybrid">Hybrid</string>

    <string name="add_hole_title">Add new Hole</string>
    <string name="add_hole_num">Hole Number</string>
    <string name="add_hole_yards">Yards</string>
    <string name="add_hole_par">Par</string>
    <string name="add_hole_btn">Begin Hole</string>
    <string name="add_hole_end_round">Complete Round</string>

    <string name="complete_title">Round Complete!</string>
    <string name="complete_intro">You shot a round of:</string>
    <string name="complete_exit">Exit Round</string>

    <string name="scorecard_title">Your Last Scorecard</string>
    <string name="scorecard_course">Course</string>
    <string name="scorecard_date">Date</string>
    <string name="scorecard_hole_num">Hole Number</string>
    <string name="scorecard_yards">Yards</string>
    <string name="scorecard_par">Par</string>
    <string name="scorecard_shots">Shots</string>

    <string name="scorecard_no_rounds">Your last round will appear here.</string>
</resources>
