<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_rounds"
            android:icon="@drawable/ic_flag_black_24dp"
            android:title="@string/nav_rounds" />
        <item
            android:id="@+id/nav_scorecards"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/nav_scorecards" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/nav_logout" />
    </group>
</menu>
