<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bckgrd_create">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:text="@string/round_setup_title"
            android:textSize="30sp"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/round_setup_course"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:paddingRight="40dp"/>

            <EditText
                android:id="@+id/course_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:padding="10dp"
                android:maxLines="1"
                android:inputType="textCapWords"
                android:textColor="@color/btn_login"
                android:textColorHint="@color/input_login_hint"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="117dp"
                android:text="@string/round_setup_date"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edit_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:padding="10dp"
                android:maxLines="1"
                android:inputType="textCapWords"
                android:textColor="@color/btn_login"
                android:textColorHint="@color/input_login_hint"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_start"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/btn_login"
            android:background="@color/btn_login_bckgrd"
            android:layout_marginBottom="10dp"
            android:text="@string/round_setup_start"/>
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/round_setup_cancel"
            android:textColor="@color/white"/>
    </LinearLayout>

</LinearLayout>