<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/btn_login"
            android:text="@string/add_hole_title"
            android:textSize="30sp"
            android:textAlignment="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_hole_num"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:paddingRight="50dp"/>

            <EditText
                android:id="@+id/holeNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:padding="10dp"
                android:maxLines="1"
                android:inputType="textCapWords"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"
                android:ellipsize="end"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_hole_yards"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:paddingRight="100dp"/>

            <EditText
                android:id="@+id/holeYards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:padding="10dp"
                android:maxLines="1"
                android:inputType="textCapWords"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"
                android:ellipsize="end"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_hole_par"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:paddingRight="115dp"/>

            <EditText
                android:id="@+id/holePar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:padding="10dp"
                android:maxLines="1"
                android:inputType="textCapWords"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"
                android:ellipsize="end"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_save_hole"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/btn_login"
            android:background="@color/btn_login_bckgrd"
            android:layout_marginBottom="10dp"
            android:text="@string/add_hole_btn"/>
        <Button
            android:id="@+id/btn_finish_round"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/btn_login"
            android:background="@color/btn_login_bckgrd"
            android:layout_marginBottom="10dp"
            android:text="@string/add_hole_end_round"/>
    </LinearLayout>
</LinearLayout>